im dumb + some comments

--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -18,7 +18,7 @@
             </div>
             <div class="tile is-parent">
             <article class="tile is-child box">
-                <p class="title"><a href="/dashboard/shortner">URL Shortner</a></p>
+                <p class="title"><a href="/dashboard/shortener">URL Shortener</a></p>
                 {% if url_count > 0 %}
                     <p class="subtitle">You have {{url_count}} shortened URLs</p>
                 {% else %}
