--- a/views/dashboard/layout.html
+++ b/views/dashboard/layout.html
@@ -10,7 +10,7 @@
                             Services
                         </p>
                         <ul class="menu-list">
-                            <li><a href="/dashboard/shortner" class="{{'is-active' if request.rel_url.path.startswith('/dashboard/shortner') else ''}}">URL Shortner</a></li>
+                            <li><a href="/dashboard/shortener" class="{{'is-active' if request.rel_url.path.startswith('/dashboard/shortener') else ''}}">URL Shortener</a></li>
                             <li><a href="/dashboard/cdn" class="{{'is-active' if request.rel_url.path.startswith('/dashboard/cdn') else ''}}">Image CDN</a></li>
                             {% if user["admin"] %}
                                 <li><a href="/dashboard/users" class="{{'is-active' if request.rel_url.path.startswith('/dashboard/users') else ''}}">Manage Users</a></li>
