--- a/views/dashboard/shortener/edit.html
+++ b/views/dashboard/shortener/edit.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/shortner/layout.html' %}
+{% extends 'dashboard/shortener/layout.html' %}
 
 {% block title %}
     Edit Short Url
@@ -45,7 +45,7 @@
             <div class="field">
                 <div class="buttons">
                     <button class="button is-info" type="submit">Save</button>
-                    <a href="/dashboard/shortner/{{key}}/delete" class="button is-danger">Delete</a>
+                    <a href="/dashboard/shortener/{{key}}/delete" class="button is-danger">Delete</a>
                 </div>
             </div>
         </form>
