--- a/views/dashboard/shortener/delete.html
+++ b/views/dashboard/shortener/delete.html
@@ -17,10 +17,10 @@
     {% else %}
         <p class="mb-3">Are you sure that you want to delete this short URL?</p>
         <pre class="mb-3">
-Key: {{key}}
+Alias: {{alias}}
 Destination: {{destination}}
 Clicks: {{clicks}}</pre>
-        <p class="mb-3">The link will immediately not work, and the key will be able to be taken by someone else. You cannot undo this action.</p>
+        <p class="mb-3">The link will immediately not work, and the alias will be able to be taken by someone else. You cannot undo this action.</p>
         <form method="POST">
             <div class="field">
                 <button class="button is-danger" type="submit">Yes, I want to delete this short URL</button>
