--- a/views/dashboard/settings/shortener.html
+++ b/views/dashboard/settings/shortener.html
@@ -1,10 +1,10 @@
 {% extends 'dashboard/settings/layout.html' %}
 
-{% block title %}
-    URL Shortener Settings
-{% endblock  %}
+{% block name %}
+    Shortener
+{% endblock %}
 
 {% block main2 %}
     <a class="button is-link mb-2" href="/dashboard/shortener/sharex">Download ShareX Config</a><br>
     <a class="is-underlined" href="https://getsharex.com/docs/custom-uploader" target="_blank">ShareX Custom Uploader Docs</a>
-{% endblock  %}
+{% endblock %}
