remove need for username

--- a/views/dashboard/index.html
+++ b/views/dashboard/index.html
@@ -5,7 +5,7 @@
 {% endblock title %}
 
 {% block main %}
-    <h1 class="title">Hello, {{user["username"]}}</h1>
+    <h1 class="title">Hello</h1>
     <h2 class="subtitle mb-3">Welcome to the <code>mzf.one</code> dashboard</h2>
 
     {% if user["authorized"] %}
