--- a/views/onboarding.html
+++ b/views/onboarding.html
@@ -8,7 +8,7 @@
     <div class="container px-3 pt-3">
         <div class="columns is-centered">
             <div class="column is-5">
-                <form action="/auth/{{'signup' if type == 'signup' else 'login'}}" method="POST">
+                <form method="POST">
                     <h1 class="title">{{"Sign Up" if type == "signup" else "Login"}}</h1>
                     <div class="field">
                         <label class="label">Email</label>
