--- a/views/dashboard/users/edit.html
+++ b/views/dashboard/users/edit.html
@@ -61,7 +61,7 @@
             <div class="field">
                 <div class="buttons">
                     <button class="button is-info" type="submit">Save</button>
-                    <a href="/dashboard/users/{{id}}/delete" class="button is-danger">Delete</a>
+                    <a href="/admin/users/{{id}}/delete" class="button is-danger">Delete</a>
                 </div>
             </div>
         </form>
