--- a/views/dashboard/users/index.html
+++ b/views/dashboard/users/index.html
@@ -56,7 +56,7 @@ Manage Users
                         <td><code>{{u["authorized"]}}</code></td>
                         <td>{{u["joined"].strftime("%d %B %Y at %H:%M")}}</td>
                         <td>
-                            <a href="/dashboard/users/{{u['id']}}/edit" class="button is-warning is-small">Edit</a>
+                            <a href="/admin/users/{{u['id']}}/edit" class="button is-warning is-small">Edit</a>
                         </td>
                     </tr>
                 {% endfor %}
