--- a/views/dashboard/users/layout.html
+++ b/views/dashboard/users/layout.html
@@ -2,17 +2,16 @@
 
 {% block main %}
     <div class="title mb-3">Manage User{{"s" if user["admin"] == True}}</div>
-
     
     {% if user["admin"] == True %}
         <div class="tabs mb-3">
             <ul>
-                <li class="{{'is-active' if request.rel_url.path == '/dashboard/users' }}"><a href="/dashboard/users">View All</a></li>
-                <li class="{{'is-active' if request.rel_url.path == '/dashboard/users/create' }}"><a href="/dashboard/users/create">Create</a></li>
-                {% if request.rel_url.path.startswith("/dashboard/users") and request.rel_url.path.endswith("/edit") %}
+                <li class="{{'is-active' if request.rel_url.path == '/admin/users' }}"><a href="/admin/users">View All</a></li>
+                <li class="{{'is-active' if request.rel_url.path == '/admin/users/create' }}"><a href="/admin/users/create">Create</a></li>
+                {% if request.rel_url.path.startswith("/admin/users") and request.rel_url.path.endswith("/edit") %}
                     <li class="is-active"><a>Edit</a></li>
                 {% endif %}
-                {% if request.rel_url.path.startswith("/dashboard/users") and request.rel_url.path.endswith("/delete")  %}
+                {% if request.rel_url.path.startswith("/admin/users") and request.rel_url.path.endswith("/delete")  %}
                     <li class="is-active"><a>Delete</a></li>
                 {% endif %}
             </ul>
