--- a/views/dashboard/users/index.html
+++ b/views/dashboard/users/index.html
@@ -5,37 +5,32 @@ Manage Users
 {% endblock title %}
 
 {% block main2 %}
-    <div class="field">
-        <div class="field-label mb-1" style="text-align: left;">
-            <label class="label">Sort By</label>
-        </div>
-        <div class="field-body">
-            <form class="field is-narrow has-addons">
-                <div class="control">
-                    <div class="select">
-                        <select name="sortby" title="Sort By">
-                            <option value="email" {% if sortby == "email" %}selected{% endif %}>Email</option>
-                            <option value="id" {% if sortby == "id" %}selected{% endif %}>User ID</option>
-                            <option value="authorized" {% if sortby == "authorized" %}selected{% endif %}>Authorized</option>
-                            <option value="joined" {% if sortby == "joined" or not sortby %}selected{% endif %}>Joined</option>
-                        </select>
-                    </div>
+    <form class="mb-3">
+        <label class="label">Sort By</label>
+        <div class="field has-addons">
+            <div class="control">
+                <div class="select">
+                    <select name="sortby" title="Sort By">
+                        <option value="email" {% if sortby == "email" %}selected{% endif %}>Email</option>
+                        <option value="id" {% if sortby == "id" %}selected{% endif %}>User ID</option>
+                        <option value="authorized" {% if sortby == "authorized" %}selected{% endif %}>Authorized</option>
+                        <option value="joined" {% if sortby == "joined" or not sortby %}selected{% endif %}>Joined</option>
+                    </select>
                 </div>
-                <div class="control">
-                    <div class="select">
-                        <select name="direction" title="Direction">
-                            <option value="desc" {% if direction == "desc" or not direction %}selected{% endif %}>Descending</option>
-                            <option value="asc" {% if direction == "asc" %}selected{% endif %}>Ascending</option>
-                        </select>
-                    </div>
+            </div>
+            <div class="control">
+                <div class="select">
+                    <select name="direction" title="Direction">
+                        <option value="desc" {% if direction == "desc" or not direction %}selected{% endif %}>Descending</option>
+                        <option value="asc" {% if direction == "asc" %}selected{% endif %}>Ascending</option>
+                    </select>
                 </div>
-                <button class="button is-primary" type="submit">
-                    Go
-                </button>
-            </form>
+            </div>
+            <div class="control">
+                <button class="button is-info" type="submit">Go</button>
+            </div>
         </div>
-    </div>
-
+    </form>
 
     <div class="table-container">
         <table class="table is-striped is-hoverable is-fullwidth is-bordered is-narrow">
