remove grouped buttons where the are not related to each other

--- a/views/dashboard/settings/account.html
+++ b/views/dashboard/settings/account.html
@@ -33,7 +33,7 @@
                 False
             </label>
         </div>
-        <div class="buttons has-addons">
+        <div class="buttons">
             <a href="/dashboard/settings/account/edit" class="button is-warning">Edit</a>
             <a href="/dashboard/settings/account/delete" class="button is-danger">Delete</a>
         </div>
