split admin into its own dashboard

--- a/views/admin/users/layout.html
+++ b/views/admin/users/layout.html
@@ -1,4 +1,4 @@
-{% extends 'dashboard/layout.html' %}
+{% extends 'admin/layout.html' %}
 
 {% block main %}
     <div class="title mb-3">Manage User{{"s" if user["admin"] == True}}</div>
