--- a/views/dashboard/layout.html
+++ b/views/dashboard/layout.html
@@ -12,7 +12,7 @@
                         <ul class="menu-list">
                             <li><a href="/dashboard/shortener" class="{{'is-active' if request.rel_url.path.startswith('/dashboard/shortener') else ''}}">URL Shortener</a></li>
                             {% if user["admin"] %}
-                                <li><a href="/admin/users" class="{{'is-active' if request.rel_url.path.startswith('/admin/users') else ''}}">Manage Users</a></li>
+                                <li><a href="/admin">Admin Dashboard</a></li>
                             {% endif %}
                         </ul>
                     {% endif %}
@@ -23,7 +23,7 @@
                         <li><a href="/dashboard/settings" class="{{'is-active' if request.rel_url.path.startswith('/dashboard/settings') else ''}}">Settings</a></li>
                         <li><a class="has-text-danger" href="/auth/logout">Logout</a></li>
                     </ul>
-                  </aside>
+                </aside>
             </div>
             <div class="column">
                 {% block main %}
