--- a/views/admin/application.html
+++ b/views/admin/application.html
@@ -15,6 +15,31 @@ Logged in Users: {{service["unique_session_count"]}}
 Shortened URLs: {{service["shortener_count"]}}
     </pre>
 
+    <h2 class="title is-3 mb-1 mt-2">Package Versions</h2>
+    <pre class="pb-0">{% for name, version in packages.items() %}
+{{name}}: v{{version}}{% endfor %}
+    </pre>
+
+    <h2 class="title is-3 mb-1 mt-2">Code</h2>
+    <pre class="pb-0">
+Lines: {{code_stats["lines"]}}
+Files: {{code_stats["files"]}}
+Characters: {{code_stats["characters"]}}
+Classes: {{code_stats["classes"]}}
+Function: {{code_stats["functions"]}}
+Coroutines: {{code_stats["coroutines"]}}
+Comments: {{code_stats["comments"]}}
+    </pre>
+    <h2 class="title is-3 mb-1 mt-2">Git</h2>
+    <pre class="pb-0">
+Branch: {{git["branch"]}}
+Remote: <a href="{{git['remote']}}">{{git["remote"]}}</a>
+Commit Count: {{git["commit_count"]}}
+Current Commit:
+    Revision: <a href="{{git['commit_url']}}">{{git["revision"]}}</a>
+    Message: {{git["commit_message"]}}
+    </pre>
+
     <h2 class="title is-3 mb-1 mt-2">CPU</h2>
     <pre class="pb-0">
 Percent: {{cpu["percentage"]}}%
