--- a/views/admin/users/create.html
+++ b/views/admin/users/create.html
@@ -32,5 +32,5 @@
         </div>
     </form>
 
-    <script src="/static/js/onboarding.js"></script>
+    <script src="/static/js/show-pw.js"></script>
 {% endblock  %}
