--- a/views/onboarding.html
+++ b/views/onboarding.html
@@ -52,5 +52,5 @@
         </div>
     </div>
 
-    <script src="/static/js/onboarding.js"></script>
+    <script src="/static/js/show-pw.js"></script>
 {% endblock %}
